test/TestSuite/Syntax/Errors/interval_start_in_range.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
# MARK: error 5 interval_start_in_range
  period 2007-08-18 +2d
}

